<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/background_gradient"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/feedback"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="问题类型:"
            android:textColor="@color/color_blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/shape_corner_light_blue"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_question"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:dropDownWidth="match_parent"
                android:entries="@array/question_style"
                android:spinnerMode="dropdown"
                android:theme="@style/spinner2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="问题描述:"
            android:textColor="@color/color_blue" />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/shape_corner_light_blue"
            android:gravity="top"
            android:hint="@string/feedback_hint"
            android:minLines="5"
            android:padding="@dimen/dp_10"
            android:textColorHint="@color/color_dark_grey"
            android:src="@drawable/mine_privacy"
            android:textSize="@dimen/sp_13" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="联系方式:"
            android:textColor="@color/color_blue" />

        <EditText
            android:id="@+id/pay_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/shape_corner_light_blue"
            android:gravity="start|center"
            android:hint="@string/feedback_pay_account"
            android:inputType="text"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColorHint="@color/color_dark_grey"
            android:src="@drawable/mine_privacy"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="联系方式:"
            android:textColor="@color/color_blue"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/shape_corner_light_blue"
            android:gravity="start|center"
            android:hint="@string/feedback_contact"
            android:inputType="phone"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="10dp"
            android:textColorHint="@color/color_dark_grey"
            android:singleLine="true"
            android:src="@drawable/mine_privacy"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="凭证上传:"
                android:textColor="@color/color_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="(小于1MB)"
                android:textColor="@color/color_dark_grey"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:layout_marginStart="@dimen/dp_20"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pics_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/background_gradient_btn"
        android:text="@string/feedback_submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>