<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/background_gradient_home">

        <FrameLayout
            android:id="@+id/fl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="@dimen/dp_10"
                android:padding="10dp"
                android:src="@drawable/mine" />

            <TextView
                android:id="@+id/talker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/color_dark_grey"
                android:textSize="@dimen/sp_15" />

            <ImageView
                android:id="@+id/user_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="@dimen/dp_10"
                android:padding="@dimen/dp_10"
                android:src="@drawable/ico_kefu" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/fl_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_below="@+id/fl"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_25"
            android:background="@drawable/shape_corner_dark_green"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:src="@drawable/notice" />

            <com.wx.tools.view.views.AutoTextView
                android:id="@+id/tv_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_5" />

        </LinearLayout>

        <com.wx.tools.view.views.WaveView
            android:id="@+id/waveView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fl_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20"
            app:bindingText="bottom_text"
            app:center_text="%"
            app:max="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/waveView"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phone_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@android:color/transparent"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/phone_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@android:color/transparent"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_13" />

        </LinearLayout>

        <com.wx.tools.view.views.WaveProgressView
            android:id="@+id/waveProgressView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="vertical"
        android:padding="@dimen/dp_5">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ry_billboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:nestedScrollingEnabled="false"
            android:overScrollMode="never" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/shape_corner_green"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/home_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/home_content1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/home_content2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_17" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>